<resources>
    <string name="reg_title">用户注册</string>
    <string name="reg_to_login">直接登录</string>
    <string name="reg_to_find_pwd">找回密码</string>
    <string name="reg_warning_phone_exist">手机号%s已注册过会员</string>
    <string name="reg_warning_forget_pwd">忘记密码</string>
    <string name="app_name">蓝九天</string>
    <string name="home">生活馆</string>
    <string name="category">分类</string>
    <string name="find">医药馆</string>
    <string name="shopping_cart">购物车</string>
    <string name="user">我的</string>
    <string name="message">消息</string>
    <string name="saoma">扫一扫</string>
    <string name="sousuo">请输入关键词.</string>
    <string name="home_button1">医药</string>
    <string name="home_button2">特产</string>
    <string name="home_button3">服饰</string>
    <string name="home_button4">美妆</string>
    <string name="home_button5">配饰</string>
    <string name="home_button6">家居</string>
    <string name="home_button7">母婴</string>
    <string name="home_button8">家电</string>
    <string name="hot">热卖好货</string>
    <string name="home_activity">活动专区</string>
    <string name="hot_list_title1">上衣</string>
    <string name="hot_list_title2">裤子</string>
    <string name="hot_list_title3">裙子</string>
    <string name="hot_list_title4">男士毛衣</string>
    <string name="hot_list_title5">针织装</string>
    <string name="hot_list_title6">运动鞋</string>
    <string name="hot_list_title7">白毛衣</string>
    <string name="hot_list_title8">中跟</string>
    <string name="xiaoliang">销量</string>
    <string name="jiage">价格</string>
    <string name="pingjia">评价</string>
    <string name="juli">距离</string>
    <string name="zonghe">综合</string>
    <string name="zuijinsousuo">最近搜索</string>
    <string name="cainixihuan">猜你喜欢</string>
    <string name="zanwusousuo">暂无搜索</string>
    <string name="kefu">客服</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="dingwei_error">定位失败</string>
    <string name="find_button1">轻松找药</string>
    <string name="find_button2">男性</string>
    <string name="find_button3">女性</string>
    <string name="find_button4">慢性病</string>
    <string name="find_button5">营养保健</string>
    <string name="find_button6">医用器械</string>
    <string name="find_button7">成人用品</string>
    <string name="find_button8">用药咨询</string>
    <string name="yiqiqiang">一起抢</string>
    <string name="gonggao_find">医药馆公告</string>
    <string name="changjia">厂家:</string>
    <string name="add_gouwu">加入购物车</string>
    <string name="goumai">立即购买</string>
    <string name="xuqiu">提交需求</string>
    <string name="heji1">合计</string>
    <string name="xiaoji">小计：</string>
    <string name="meiqian">￥100</string>
    <string name="pay_choice0">支付方式</string>
    <string name="pay_choice1">在线支付</string>
    <string name="pay_choice2">货到付款</string>
    <string name="pay_choice3">账户余额支付</string>
    <string name="pay_choice4">支付宝支付</string>
    <string name="pay_choice5">银联支付</string>
    <string name="pay_wechat">微信支付</string>
    <string name="login_style_wechat">微信登录</string>
    <string name="login_style_username">帐号登录</string>
    <string name="login_style_validcode">验证码登录</string>
    <string name="fapiao">发票信息</string>
    <string name="fapiao_xuanze">发票选择</string>
    <string name="fapiao_leixing">发票类型</string>
    <string name="fapiao_yes">发票明细</string>
    <string name="fapiao_mx">明细</string>
    <string name="fapiao_bg">办公用品</string>
    <string name="fapiao_yy">药品</string>
    <string name="fapiao_hc">耗材</string>
    <string name="fapiao_jj">家居用品</string>
    <string name="fapiao_no">不开发票</string>
    <string name="fapiao_z">纸质发票</string>
    <string name="fapiao_d">电子发票</string>
    <string name="fapiao_gr">个人</string>
    <string name="fapiao_gs">公司</string>
    <string name="jifendikou">积分抵扣</string>
    <string name="shiqu">市区</string>
    <string name="xiancheng">县城</string>
    <string name="nicheng">昵称</string>
    <string name="gerenxinxi">个人信息</string>
    <string name="birthday">出生日期</string>
    <string name="user_shoucang">我的收藏</string>
    <string name="user_zuji">我的足迹</string>
    <string name="user_qianbao">我的钱包</string>
    <string name="user_jifen">我的积分</string>
    <string name="user_bangzhu">帮助中心</string>
    <string name="user_zhanghu">账户管理</string>
    <string name="user_dingdan">我的订单</string>
    <string name="daifu">待付款</string>
    <string name="daifa">待发货</string>
    <string name="daishou">待收货</string>
    <string name="daiping">待评价</string>
    <string name="shohou">退款/售后</string>
    <string name="tuijian_cai">猜你喜欢</string>
    <string name="zhucetiaoli">同意《蓝九天用户注册条例》</string>
    <string name="zhuce">手机快速注册</string>
    <string name="wangjimima">忘记密码</string>
    <string name="order_queren">确认订单</string>
    <string name="order_tijiao">提交订单</string>
    <string name="order_chakan">查看订单</string>
    <string name="order_xiangqing">订单详情</string>
    <string name="order_style6">已完成</string>
    <string name="order_style7">交易关闭</string>
    <string name="order_zongjia">商品总价</string>
    <string name="order_yunfei">运费（快递）</string>
    <string name="order_quxiao">取消订单</string>
    <string name="order_shanchu">删除订单</string>
    <string name="order_dingdan">订单总价</string>
    <string name="order_pingjia">评价</string>
    <string name="order_lianxi1">联系卖家</string>
    <string name="order_lianxi2">拨打电话</string>
    <string name="order_dikou">积分抵扣</string>
    <string name="order_pf1">宝贝与描述相符</string>
    <string name="order_pf2">物流服务的质量</string>
    <string name="order_pf3">卖家的服务态度</string>
    <string name="order_pf4">卖家的发货速度</string>
    <string name="order_pf5">物流的发货速度</string>
    <string name="fukuan">立即支付</string>
    <string name="querenshou">确认收货</string>
    <string name="address_name">张三</string>
    <string name="address_phone">18512395532</string>
    <string name="address_ads">山西省晋城市城区钟家庄办事处文昌东街330号蓝九天电子商务2楼</string>
    <string name="address_moren">设为默认</string>
    <string name="address_add">新增地址</string>
    <string name="address_guanli">管理收货地址</string>
    <string name="shouhuo_name">收货人</string>
    <string name="shouhuo_phone">联系电话</string>
    <string name="shouhuo_address">所在地区</string>
    <string name="shouhuo_xiangxi">详细地址:楼号 单元号 门牌号</string>
    <string name="shouhuo_xuanze">选择地区</string>
    <string name="shouhuo_shanchu">删除地址</string>
    <string name="touxiang">用户头像</string>
    <string name="shiming">尊敬的用户，进行实名认证有助于提升账号安全，让我们更好的为您服务。</string>
    <string name="shiming_name">真实姓名</string>
    <string name="shiming_card">身份证号</string>
    <string name="shiming_tiaoli">阅读并同意</string>
    <string name="shiming_tiaoli1">《实名认证协议》</string>
    <string name="manage_address">收货地址</string>
    <string name="manage_huiyuan">会员名</string>
    <string name="manage_safety">安全中心</string>
    <string name="wuliu_chakan">查看物流</string>
    <string name="shouhou_shenqing">退款/售后</string>
    <string name="shouhou_yuanyin">退货原因</string>
    <string name="shouhou_jine">退款金额</string>
    <string name="shouhou_shuoming">退货说明（可同时上传3张凭证）</string>
    <string name="peisong">配送方式</string>
    <string name="peisong1">送货上门</string>
    <string name="peisong2">门店自取</string>
    <string name="message1">消息中心</string>
    <string name="message_type1">蓝九天客服</string>
    <string name="bangzhu_wenti">常见问题</string>
    <string name="bangzhu_peisong">配送说明</string>
    <string name="bangzhu_zhinan">购物指南</string>
    <string name="bangzhu_kefu">联系客服</string>
    <string name="gengduo">更多></string>
    <string name="bianji">编辑</string>
    <string name="shanchu">删除</string>
    <string name="hengxian">----</string>
    <string name="msg_opreation_timeout">与服务器连接超时，请稍后重试</string>
    <string name="network_not_available">无法连接到网络，请检查网络配置</string>
    <string name="auth_expire">您的用户授权已过期，请重新登录</string>
    <string name="yanzhengma">我们将发送验证码到您的手机上</string>
    <string name="phone_number">手机号</string>
    <string name="phone_number1">请输入手机号码</string>
    <string name="next">下一步</string>
    <string name="regist">注册</string>
    <string name="yanzhengma1">验证码</string>
    <string name="yanzhengma_huoqu">获取验证码</string>
    <string name="yanzhengma_huoqu_timer">%d秒</string>
    <string name="yanzhengma2">请输入验证码</string>
    <string name="yanzhengma3">重新获取</string>
    <string name="yanzhengma4">验证码已发送至</string>
    <string name="shezhimima">设置密码</string>
    <string name="shezhimima1"></string>
    <string name="zhanghao">账号</string>
    <string name="mima">密码</string>
    <string name="mima1">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_bindphone_title">账户安全验证</string>
    <string name="login_bindphone">验证</string>
    <string name="no_login">去登录</string>
    <string name="sousuo1">搜索</string>
    <string name="all">全部</string>
    <string name="qingxuanze">请选择商品规格</string>
    <string name="sex">性别</string>
    <string name="name">姓名</string>
    <string name="alert_tishi">提示</string>
    <string name="alert_quxiao">取消</string>
    <string name="alert_queding">确定</string>
    <string name="alert_xiugai">修改了信息还未保存，确定现在返回吗？</string>
    <string name="alert_dizhi">您必须拥有一个地址信息，请添加并保存</string>
    <string name="tijiao">提交</string>
    <string name="number">数量</string>
    <string name="shouhou">售后</string>
    <string name="app_update">关于</string>
    <string name="pay_success">支付成功！</string>
    <string name="pay_fail">支付失败！</string>
    <string name="pay_cancel">你已取消了本次订单的支付！</string>
    <string name="phone_error">请输入正确的手机号码</string>
    <string name="realname_error1">请输入正确格式的姓名</string>
    <string name="realname_error2">请输入与姓名对应的正确格式身份证</string>
    <string name="address_error">请输入一个您可以接收到物流的详细地址信息</string>
    <string name="empty_error">暂无数据</string>
    <string name="empty_order">您还没有相关订单</string>
    <string name="update_succeed">修改成功</string>
    <string name="delete_succeed">删除成功</string>
    <string name="add_succeed">新增成功</string>
    <string name="error_app">APP出现未知错误，需重启！</string>
    <string name="double_tap_to_exit">再按一次退出程序</string>
    <string name="exit_account">退出当前用户</string>
    <string name="order_info">市区两小时内送达，县城两日内到货。详情请见帮助中心的区域划分。</string>
    <string name="order_point_info">医药馆药品统一包邮。生活馆商品市区满38元包邮，38元以下邮费3元。县区满58元包邮，58元以下邮费5元。</string>
    <string name="logistic_null">没有获取物流信息</string>
    <string name="title_activity_web_show">WebShowActivity</string>
    <string name="user_yue">我的余额</string>
    <string name="user_youhuiquan">我的优惠券</string>
    <string name="title_activity_balance">BalanceActivity</string>
    <string name="balance_in">充值记录</string>
    <string name="balance_out">消费记录</string>
    <string name="title_activity_point">PointRecordActivity</string>
    <string name="order_info_tousu">投诉建议</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="title_activity_test">Activity</string>
    <string name="gongxi">恭喜您</string>
    <string name="ok">好的</string>
    <string name="tickets_dianzibi">电子币</string>
    <string name="tickets_diyouquan">抵邮券</string>
    <string name="complete">完成</string>
    <string name="holder">未知</string>
    <string name="datespan">有效期限</string>
    <string name="use_dianzibi">电子币</string>
    <string name="use_youfeiquan">抵邮券</string>
    <string name="use_youhuiquan">优惠券</string>
    <string name="password_valid">密码设置: 6-20位字母，数字组成的密码</string>
    <string name="confirm_order_cancel">要取消订单吗?</string>
    <string name="confirm_order_del">要删除订单吗?</string>
    <string name="nil">未知</string>
    <string name="order_dianzibi">电子币抵扣</string>
    <string name="postage_flg_display">(使用了抵邮券)</string>
    <string name="agree_license">请您同意协议</string>
    <string name="use_dianzibi_refuse">拒绝使用电子币</string>
    <string name="use_youfeiquan_refuse">拒绝使用邮费抵用券</string>
    <string name="shop">店铺</string>
    <string name="shop_nearest">新品上架</string>
    <string name="confirm_order_submit">是否确认下单</string>
    <string name="shengshi_error">请选择所在区域</string>
    <string name="stat_unkwon">未知状态</string>
    <string name="use">使用</string>
</resources>