<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/vertical_margin_lg"
        android:scaleType="fitXY"
        android:src="@mipmap/denglubeijing" />

    <ImageView
        android:id="@+id/guanbi"
        android:layout_width="@dimen/x18"
        android:layout_height="@dimen/x18"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginTop="@dimen/x15"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_chahao" />

    <LinearLayout
        android:id="@+id/zhanghao"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x35"
        android:layout_below="@+id/guanbi"
        android:layout_marginTop="@dimen/x135"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/font_ww_14"
            android:layout_marginLeft="@dimen/x10"
            android:text="@string/zhanghao"
            android:textColor="@color/font_black1" />

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginRight="@dimen/x10"
            android:background="@null"
            android:hint="@string/phone_number1"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_below="@+id/zhanghao"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:background="@color/basebackground" />

    <LinearLayout
        android:id="@+id/mima"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x35"
        android:layout_below="@+id/zhanghao"
        android:layout_marginTop="@dimen/x5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/font_ww_14"
            android:layout_marginLeft="@dimen/x10"
            android:text="@string/mima"
            android:textColor="@color/font_black1" />

        <EditText
            android:id="@+id/ed_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginRight="@dimen/x10"
            android:background="@null"
            android:hint="@string/mima1"
            android:maxLines="1"
            android:password="true"
            android:singleLine="true"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_below="@+id/mima"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:background="@color/basebackground" />

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x35"
        android:layout_below="@+id/mima"
        android:layout_marginLeft="@dimen/x15"
        android:layout_marginRight="@dimen/x15"
        android:layout_marginTop="@dimen/x35"
        android:background="@drawable/background_submit_yuan_lan"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/next"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginTop="@dimen/x4">

        <TextView
            android:id="@+id/zhuce"
            style="@style/font_ww_14"
            android:padding="@dimen/x10"
            android:text="@string/zhuce" />

        <TextView
            android:id="@+id/chongzhi"
            style="@style/font_ww_14"
            android:layout_alignParentRight="true"
            android:padding="@dimen/x10"
            android:text="@string/wangjimima" />

    </RelativeLayout>

</RelativeLayout>